# packages/node/icy-eye/source-control-api/src/models/InlineResponse200.ts
@@ -1,64 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * Source Control Service
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document: 1.0.0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { exists, mapValues } from '../runtime';
-import {
-    SourceCodeRepository,
-    SourceCodeRepositoryFromJSON,
-    SourceCodeRepositoryFromJSONTyped,
-    SourceCodeRepositoryToJSON,
-} from './';
-
-/**
- * 
- * @export
- * @interface InlineResponse200
- */
-export interface InlineResponse200 {
-    /**
-     * 
-     * @type {Array<SourceCodeRepository>}
-     * @memberof InlineResponse200
-     */
-    data: Array<SourceCodeRepository>;
-}
-
-export function InlineResponse200FromJSON(json: any): InlineResponse200 {
-    return InlineResponse200FromJSONTyped(json, false);
-}
-
-export function InlineResponse200FromJSONTyped(json: any, ignoreDiscriminator: boolean): InlineResponse200 {
-    if ((json === undefined) || (json === null)) {
-        return json;
-    }
-    return {
-        
-        'data': ((json['data'] as Array<any>).map(SourceCodeRepositoryFromJSON)),
-    };
-}
-
-export function InlineResponse200ToJSON(value?: InlineResponse200 | null): any {
-    if (value === undefined) {
-        return undefined;
-    }
-    if (value === null) {
-        return null;
-    }
-    return {
-        
-        'data': ((value.data as Array<any>).map(SourceCodeRepositoryToJSON)),
-    };
-}
-
-
