# packages/node/icy-eye/source-control-api/src/models/index.ts
@@ -1,4 +1,0 @@
-export * from './ErrorResult';
-export * from './GitRepository';
-export * from './InlineResponse200';
-export * from './SourceCodeRepository';
